--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -138,8 +138,20 @@
                     <td>{{ row.courseDepartment }}</td>
                     <td>[{{ row.courseExamId }}]</td>
                     <td>
-                        Practical Lecturer: {{ row.practicalLecturer.userName }} <br>
-                        Tutorial Lecturer : {{ row.tutorialLecturer.userName }}
+                        Practical Lecturer:
+                        <span {% if row.practicalLecturer is none and row.coursePractical in missing_lecturers %}
+                                style="border:2px solid red; padding:2px;"
+                            {% endif %}>
+                            {{ row.practicalLecturer.userName if row.practicalLecturer else row.coursePractical }}
+                        </span>
+                        <br>
+
+                        Tutorial Lecturer:
+                        <span {% if row.tutorialLecturer is none and row.courseTutorial in missing_lecturers %}
+                                style="border:2px solid red; padding:2px;"
+                            {% endif %}>
+                            {{ row.tutorialLecturer.userName if row.tutorialLecturer else row.courseTutorial }}
+                        </span>
                     </td>
                     <td>[{{ row.courseStudent }}]</td>
                 </tr>
