--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -153,7 +153,7 @@
                         {% endif %}
                     </td>
                     <td>
-                        {{% if row.userDepartment %}}
+                        {% if row.userDepartment %}
                             {{ row.userDepartment }}
                         {% else %}
                             <span style="color:red;">[ERROR]</span>
