--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -43,7 +43,7 @@
                 </a>
                 <a href="{{ url_for('admin_manageStaff') }}" class="tab-link {% if active_tab == 'admin_manageStafftab' %}active{% endif %}">
                     <i class="fas fa-user-tie"></i>
-                    <span>Manage Staff</span>
+                    <span>(D)Manage Staff</span>
                 </a>
                 <a href="{{ url_for('admin_manageTimetable') }}" class="tab-link {% if active_tab == 'admin_manageTimetabletab' %}active{% endif %}">
                     <i class="fas fa-calendar-days"></i>
