--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -27,9 +27,9 @@
             <label for="course_list">
                 <div class="upload-container" id="courseUploadContainer">
                     <div class="upload-text">
-                        Upload a file with an empty first row. Data should start from columns A to H,<br>
-                        labeled as: ['Department Code', 'Course Code', 'Course Section', 'Course Name', 'Credit Hour', 'Practical Lecturer', 'Tutorial Lecturer', 'No of Students']<br><br><br>
-                        Click to upload or drag and drop with below file format
+                        Please upload a file with an empty first row. Data should begin from columns A to H,<br>
+                        labeled as: ['Department Code', 'Course Code', 'Course Section', 'Course Name', 'Credit Hour', 'Practical Lecturer', 'Tutorial Lecturer', 'No of Students'].<br><br><br>
+                        Click to upload or drag and drop a file below (accepted file formats).
                     </div>
                     <div class="file-types">XLSX, XLS, or XLSM</div><br>
                     <div id="courseSelectedFileName" class="file-name-display"></div>
