--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -26,12 +26,12 @@
             <label for="staff_list">
                 <div class="upload-container" id="staffUploadContainer">
                     <div class="upload-text">
-                        Please Upload A File With An Empty First Row. Data Should Begin From Columns A To G,<br>
-                        Labeled As: ['Id', 'Name', 'Department', 'Role', 'Email', 'Contact', 'Gender'].<br>
-                        Ensure The Data Follows This Format:<br>
-                        • 'Email' Must End With <b>@newinti.edu.my</b><br>
-                        • 'Contact' Must Start With '01' And Contain 10–11 Digits<br><br><br>
-                        Click To Upload Or Drag And Drop A File Below (Accepted File Formats).
+                        Please upload a file with an empty first row. Data should begin from columns A to G,<br>
+                        labeled as: ['Id', 'Name', 'Department', 'Role', 'Email', 'Contact', 'Gender'].<br><br>
+                        Ensure the data follows this format:<br>
+                        • 'Email' must end with <b>@newinti.edu.my</b><br>
+                        • 'Contact' must start with '01' and contain 10–11 digits<br><br><br>
+                        Click to upload or drag and drop a file below (accepted file formats).
                     </div>
                     <div class="file-types">XLSX, XLS, or XLSM</div><br>
                     <!-- Selected file display -->
