--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -173,9 +173,10 @@
                     
                         <td>
                             {% if row.examNoInvigilator == 0 %}
-                                <span style="color:red;">[SELECT INVIGILATOR]</span>
+                                <span style="color:red;">Error: No Invigilator Assigned!</span>
                             {% else %}
                                 [{{ row.examNoInvigilator }}]
+                            {% endif %}
                         </td>
                     </tr>
                 {% endfor %}
