--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -23,19 +23,19 @@
             <div class="tab-nav">
                 <a href="{{ url_for('admin_homepage') }}" class="tab-link {% if active_tab == 'admin_hometab' %}active{% endif %}">
                     <i class="fas fa-house"></i>
-                    <span>(D)Home</span>
+                    <span>Home</span>
                 </a>
                 <a href="{{ url_for('admin_manageCourse') }}" class="tab-link {% if active_tab == 'admin_manageCoursetab' %}active{% endif %}">
                     <i class="fas fa-book-open"></i>
-                    <span>(D)Manage Course</span>
+                    <span>Manage Course</span>
                 </a>
                 <a href="{{ url_for('admin_manageDepartment') }}" class="tab-link {% if active_tab == 'admin_manageDepartmenttab' %}active{% endif %}">
                     <i class="fas fa-building-columns"></i>
-                    <span>(D)Manage Department</span>
+                    <span>Manage Department</span>
                 </a>
                 <a href="{{ url_for('admin_manageVenue') }}" class="tab-link {% if active_tab == 'admin_manageVenuetab' %}active{% endif %}">
                     <i class="fas fa-school"></i>
-                    <span>(D)Manage Venue</span>
+                    <span>Manage Venue</span>
                 </a>
                 <a href="{{ url_for('admin_manageExam') }}" class="tab-link {% if active_tab == 'admin_manageExamtab' %}active{% endif %}">
                     <i class="fas fa-clipboard-list"></i>
@@ -43,23 +43,23 @@
                 </a>
                 <a href="{{ url_for('admin_manageStaff') }}" class="tab-link {% if active_tab == 'admin_manageStafftab' %}active{% endif %}">
                     <i class="fas fa-user-tie"></i>
-                    <span>(D)Manage Staff</span>
+                    <span>Manage Staff</span>
                 </a>
                 <a href="{{ url_for('admin_manageTimetable') }}" class="tab-link {% if active_tab == 'admin_manageTimetabletab' %}active{% endif %}">
                     <i class="fas fa-calendar-days"></i>
-                    <span>(D)Manage Timetable</span>
+                    <span>Manage Timetable</span>
                 </a>
                 <a href="{{ url_for('admin_manageInvigilationTimetable') }}" class="tab-link {% if active_tab == 'admin_manageInvigilationTimetabletab' %}active{% endif %}">
                     <i class="fas fa-business-time"></i>
-                    <span>(D)Manage Invigilation Timetable</span>
+                    <span>Manage Invigilation Timetable</span>
                 </a>
                 <a href="{{ url_for('admin_manageInvigilationReport') }}" class="tab-link {% if active_tab == 'admin_manageInvigilationReporttab' %}active{% endif %}">
                     <i class="fas fa-file-signature"></i>
-                    <span>(D)Manage Invigilation Report</span>
+                    <span>Manage Invigilation Report</span>
                 </a>
                 <a href="{{ url_for('admin_profile') }}" class="tab-link {% if active_tab == 'admin_profiletab' %}active{% endif %}">
                     <i class="fas fa-id-badge"></i>
-                    <span>(D)Profile</span>
+                    <span>Profile</span>
                 </a>
                 <a href="{{ url_for('logout') }}" class="logout-btn">
                     <i class="fas fa-right-from-bracket"></i>
